--- a/demo/basic.html
+++ b/demo/basic.html
@@ -8,9 +8,9 @@
     <!-- firefox didn't for without adding this links in the index -->
     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
     <link rel="import" href="../bower_components/dude-style/dude-style.html">
-    <link rel="import" href="dude/demo-dude.html">
+    <link rel="import" href="basic/demo-basic.html">
 </head>
 <body class="fullbleed">
-    <demo-dude></demo-dude>
+    <demo-basic></demo-basic>
 </body>
 </html>
