Added create block

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -253,16 +253,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * @param {Object} cgBlockData
          */
         createBlock: function (cgBlockData) {
-            /*
             var cgBlock = this.loader.loadBlock(this.graph, _.merge(cgBlockData, {
                 "cgId": _.uuid()
             }));
-            var renderBlock = this.renderer.createRenderBlock({
+            this.renderer.createRenderBlock({
                 "id": cgBlock.cgId,
                 "cgBlock": cgBlock.cgId
             }, true);
-            this.renderer.panToFitRenderNode(renderBlock);
-            */
         },
 
         /***
