Fixed basic demo

--- a/demo/basic/demo-basic.html
+++ b/demo/basic/demo-basic.html
@@ -105,7 +105,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             ready: function () {
-                this.$.inspector.dudeGraphEditor = this.$.editor; // Attach the editor to inspect
+                this.$.inspector.editor = this.$.editor;
                 this.$.editor.load();
                 this.$.inspector.load();
             }
