--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -96,7 +96,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     <dude-collapse heading="Edit Block">
                         <dude-property property-type="string"
                                        property-name="block name"
-                                       property-value="{{ _renderBlock.block.cgName }}"
+                                       property-value="{{ _renderBlock.nodeName }}"
                                        no-menu>
                         </dude-property>
                         <template is="dom-repeat" items="[[ _getInputs(_renderBlock) ]]" as="renderPoint">
