--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -431,7 +431,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     return null;
                 }
                 return _.filter(renderBlock.renderPoints, function (renderPoint) {
-                    return renderPoint.point.empty() && !(renderPoint.point instanceof dudeGraph.Stream) && !renderPoint.point.isOutput;
+                    return _.isEmpty(renderPoint.point.renderConnections) && !(renderPoint.point instanceof dudeGraph.Stream) && !renderPoint.point.isOutput;
                 });
             },
 
