--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -3,6 +3,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../../../polymer/polymer.html">
 <link rel="import" href="../../../iron-localstorage/iron-localstorage.html">
+<link rel="import" href="../../../paper-toast/paper-toast.html">
 <link rel="import" href="../../dude-graph-editor.html">
 <link rel="import" href="../../dude-graph-inspector.html">
 <script src="demo-dude.js"></script>
@@ -14,8 +15,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         #wrapper {
             border: 2px solid #222222;
         }
+
         .panel {
             border: 2px solid #222222;
+        }
+
+        #error {
+            color: var(--text-primary-color);
+            background: var(--paper-red-500);
         }
     </style>
     <template>
@@ -30,6 +37,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 on-iron-localstorage-load-empty="_graphRendererDataEmpty">
         </iron-localstorage>
         <div id="wrapper" class="layout horizontal fit">
+            <paper-toast id="error"></paper-toast>
             <dude-graph-editor id="editor"
                                class="panel layout horizontal flex-2"
                                graph-data="[[ graphData ]]"
@@ -108,7 +116,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _editorError: function (e) {
-                console.error(e.detail.error);
+                this.$.error.text = e.detail.error;
+                this.$.error.show();
             },
 
             /**
