--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,7 +6,7 @@
     <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- firefox didn't for without adding this links in the index -->
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" type="text/css">
     <link rel="import" href="../bower_components/dude-style/dude-style.html">
     <link rel="import" href="dude/demo-dude.html">
 </head>
