--- a/dude-graph-tool.html
+++ b/dude-graph-tool.html
@@ -1,3 +1,6 @@
+<!--
+Copyright (c) 2015 DudeTeam. All rights reserved.
+-->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
 <!--
