--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -207,6 +207,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             "pointTypes": {
                 "type": Array,
                 "value": [
+                    {"point": "Choice", "type": dudeGraph.Choice},
                     {"point": "Stream", "type": dudeGraph.Stream}
                 ]
             }
