Fixed choice not persisted, closes #151

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -103,7 +103,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                             <template is="dom-if" if="[[ _isPointType(renderPoint, 'Choice') ]]">
                                 <dude-property property-type="choice"
                                                property-name="{{ renderPoint.point.cgName }}"
-                                               property-value="{{ renderPoint.point.value }}"
+                                               property-value="{{ renderPoint.point.choice }}"
                                                property-choice="{{ renderPoint.point.choices }}"
                                                no-reference>
                                 </dude-property>
