--- a/dude-graph-tool.html
+++ b/dude-graph-tool.html
@@ -24,7 +24,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     </style>
     <template>
         <a id="tool"><i class$="[[ icon ]]"></i></a>
-        <paper-tooltip for="tool">[[ description ]]</paper-tooltip>
+        <paper-tooltip for="tool" position="top" animation-delay="0">[[ description ]]</paper-tooltip>
     </template>
     <script>
         Polymer({
