--- a/demo/dude/demo-dude.html
+++ b/demo/dude/demo-dude.html
@@ -6,6 +6,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../../../paper-toast/paper-toast.html">
 <link rel="import" href="../../dude-graph-editor.html">
 <link rel="import" href="../../dude-graph-inspector.html">
+<link rel="import" href="../../dude-graph-toolbar.html">
 <script src="demo-dude.js"></script>
 <!--
 `demo-dude` is a Polymer element to wrap a dude-graph demo
@@ -36,20 +37,26 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 value="{{ rendererData }}"
                 on-iron-localstorage-load-empty="_graphRendererDataEmpty">
         </iron-localstorage>
+        <paper-toast id="error"></paper-toast>
         <div id="wrapper" class="layout horizontal fit">
-            <paper-toast id="error"></paper-toast>
-            <dude-graph-editor id="editor"
-                               class="panel layout horizontal flex-2"
-                               graph-data="[[ graphData ]]"
-                               renderer-data="[[ rendererData ]]"
-                               renderer-config="[[ rendererConfig ]]"
-                               on-dude-graph-editor-error="_editorError">
-            </dude-graph-editor>
-            <dude-graph-inspector id="inspector"
-                                  class="panel layout horizontal flex"
-                                  model-data="[[ modelData ]]"
-                                  on-dude-graph-inspector-save="_inspectorSave">
-            </dude-graph-inspector>
+            <div class="layout vertical flex">
+                <div class="layout horizontal flex">
+                    <dude-graph-editor id="editor"
+                                       class="panel layout horizontal flex-2"
+                                       graph-data="[[ graphData ]]"
+                                       renderer-data="[[ rendererData ]]"
+                                       renderer-config="[[ rendererConfig ]]"
+                                       on-dude-graph-editor-error="_editorError">
+                    </dude-graph-editor>
+                    <dude-graph-inspector id="inspector"
+                                          class="panel layout horizontal flex"
+                                          model-data="[[ modelData ]]">
+                    </dude-graph-inspector>
+                </div>
+                <dude-graph-toolbar id="toolbar"
+                                    on-dude-graph-toolbar-save="_runSave"
+                                    on-dude-graph-toolbar-play="_runPlay"></dude-graph-toolbar>
+            </div>
         </div>
     </template>
     <script>
@@ -96,6 +103,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              */
             attached: function () {
                 this.$.inspector.editor = this.$.editor;
+                this.$.toolbar.inspector = this.$.inspector;
+                this.$.toolbar.editor = this.$.editor;
                 this.$.editor.load();
                 this.$.inspector.load();
             },
@@ -126,9 +135,18 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @param {CustomEvent} e
              * @private
              */
-            _inspectorSave: function (e) {
+            _runSave: function (e) {
                 this.set("graphData", e.detail.graphData);
                 this.set("rendererData", e.detail.rendererData);
+            },
+
+            /**
+             * Called when the play button is pressed.
+             * @param e
+             * @private
+             */
+            _runPlay: function (e) {
+                console.log("PLAY!");
             }
         });
     </script>
